--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="map.css">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <!-- Mapbox GL JS CSS -->
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <title>Bikewatching</title>
 </head>
 <body>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <h1>🚴🏼‍♀️ Bikewatching</h1>
+  <div id="map"></div>
 </body>
 </html>
