--- a/index.html
+++ b/index.html
@@ -3,16 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="global.css">
-  <link rel="stylesheet" href="map.css">
-  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-  <!-- Mapbox GL JS CSS -->
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <title>Bikewatching</title>
+  
+  <!-- Link to global styles -->
+  <link rel="stylesheet" href="global.css">
+  
+  <!-- Mapbox GL JS CSS -->
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
+  
+  <!-- Link to map styles -->
+  <link rel="stylesheet" href="map.css">
+  
+  <!-- Favicon -->
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
 </head>
+
 <body>
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <h1>🚴🏼‍♀️ Bikewatching</h1>
-  <div id="map"></div>
+  <p>Interactive bike-related mapping using Mapbox.</p>
+  
+  <!-- Map container -->
+  <div id="map">
+    <svg></svg>
+  </div>
+
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  
+  <!-- Load Mapbox GL JS -->
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+  
+  <!-- Load the map script (must be after Mapbox GL JS) -->
+  <script src="map.js"></script>
 </body>
 </html>
