--- a/index.html
+++ b/index.html
@@ -4,47 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikewatching</title>
-
-  <!-- Link to global styles -->
   <link rel="stylesheet" href="global.css">
-  
-  <!-- Mapbox GL JS CSS -->
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
-  
-  <!-- Link to map styles -->
   <link rel="stylesheet" href="map.css">
-  
-  <!-- Favicon -->
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
 </head>
-
 <body>
   <header>
     <h1>🚴🏼‍♀️ Bikewatching</h1>
     <p></p>
-    
-    <!-- Time Filter Slider -->
     <label for="time-filter">Filter by time:</label>
     <input id="time-filter" type="range" min="-1" max="1440" step="1">
-    
-    <!-- Time Display -->
     <div>
       <em id="any-time">(any time)</em>
       <time id="selected-time"></time>
     </div>
   </header>
-
-  <!-- Map container -->
   <div id="map">
     <svg></svg>
   </div>
-
+  <div class="legend">
+    <div style="--departure-ratio: 1">More departures</div>
+    <div style="--departure-ratio: 0.5">Balanced</div>
+    <div style="--departure-ratio: 0">More arrivals</div>
+  </div>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  
-  <!-- Load Mapbox GL JS -->
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-  
-  <!-- Load the map script (must be after Mapbox GL JS) -->
   <script src="map.js"></script>
 </body>
 </html>
